tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/module-attributes/valid-syntax-with-attributes-and-value/input.js
import "x" with type: "json"
[0]
