tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/module-attributes/invalid-syntax-with-attributes-multiple-lines/input.js
import "x" with
type: "json"
